--- a/solver/solver.vcxproj
+++ b/solver/solver.vcxproj
@@ -111,6 +111,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CodeGeneration>compute_30,sm_30</CodeGeneration>
+      <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -157,14 +158,23 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="constants.cu" />
+    <CudaCompile Include="helpers.cu" />
     <CudaCompile Include="kernel.cu">
       <FileType>Document</FileType>
     </CudaCompile>
+    <CudaCompile Include="test_functions.cu" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="solver.cu">
       <FileType>Document</FileType>
     </CudaCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="constants.cuh" />
+    <ClInclude Include="helpers.cuh" />
+    <ClInclude Include="solver.cuh" />
+    <ClInclude Include="test_functions.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
